# cwdapache

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac  generate-authz-svn-access-file.py  version-gen
Apache-CrowdAuth/: Changes  LICENSE  MANIFEST  META.yml  Makefile.PL  Makefile.old  Makefile.pkg  README  depend  makeppd.bat  makerpm_el4.sh  makerpm_el5.sh  makerpm_el6.sh  pkginfo  prototype
Apache-CrowdAuth/debian/: changelog  control  copyright  watch
Apache-CrowdAuth/lib/Apache/: CrowdAuth.pm
Apache-CrowdAuth/t/: Apache-CrowdAuth.t
Apache-CrowdAuthz/: Changes  MANIFEST  META.yml  Makefile.PL  Makefile.old  Makefile.pkg  README  makedeb.sh  makeppd.bat  pkginfo  prototype
Apache-CrowdAuthz/lib/Apache/: CrowdAuthz.pm
Apache-CrowdAuthz/t/: Apache-CrowdAuthz.t
Atlassian-Crowd/: Changes  MANIFEST  META.yml  Makefile.PL  Makefile.old  Makefile.pkg  README  makeppd.bat  makerpm.sh  makerpm_el4.sh  makerpm_el5.sh  makerpm_el6.sh  pkginfo  prototype
Atlassian-Crowd/debian/: changelog  control  copyright  files  rules  watch
Atlassian-Crowd/lib/Atlassian/: Crowd.pm
Atlassian-Crowd/t/: Atlassian-Crowd.t  test_authz.txt  testconfig.txt
DEBS/: libapache-crowdauth-perl_1.3-1_all.deb  libapache-crowdauthz-perl_1.3-1_all.deb  libatlassian-crowd-perl_1.3-1_all.deb
PKGS/: ATLNperl-apache-crowdauth-all.pkg  ATLNperl-apache-crowdauthz-all.pkg  ATLNperl-atlassian-crowd-all.pkg
PPDS/5.10/: Apache-CrowdAuth.ppd  Apache-CrowdAuthz.ppd  Atlassian-Crowd.ppd
PPDS/5.8/: Apache-CrowdAuth.ppd  Apache-CrowdAuthz.ppd  Atlassian-Crowd.ppd
debian/: apache2  authnz_crowd.load  authz_svn_crowd.load  changelog  control  copyright  rules
src/: Makefile.am  cache.c  cache.h  crowd_client.c  crowd_client.h  mod_authnz_crowd.c  mod_authnz_crowd.h  test.py  util.c  util.h
src/httpd/conf/: common.conf.in  httpd.conf  httpd_duplicate.conf  httpd_missing.conf  httpd_mock_crowd.conf  httpd_svn.conf.in  mime.types  svn_access.conf
src/httpd/svn/db/: rep-cache.db  uuid
src/httpd/svn/db/revprops/0/: 0  1  2  3
src/httpd/svn/db/revs/0/: 1  2  3
src/httpd/svn/hooks/: pre-commit.tmpl  pre-lock.tmpl  pre-unlock.tmpl
src/svn/: Makefile.am  mod_authz_svn_crowd.c
windows/mod_authnz_crowd/: mod_authnz_crowd.sln
windows/mod_authnz_crowd/mod_authnz_crowd/: ReadMe.txt  mod_authnz_crowd.cpp  mod_authnz_crowd.h  mod_authnz_crowd.vcxproj  mod_authnz_crowd.vcxproj.filters  stdafx.cpp
